// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-0 {
  opacity: 0;
  width: 0;
}

.emotion-0:focus + svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-1 {
  fill: #dce1eb;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-1.emotion-1 {
  margin-right: 10px;
  padding: 2px;
}

.emotion-2 {
  padding-top: 2px;
}

.emotion-5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-5.emotion-5 {
  overflow: hidden;
}

.emotion-4.emotion-4 {
  font-size: 12px;
  color: #ffc107;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="sui-box emotion-6"
  >
    <label
      class="sui-box emotion-3"
    >
      <input
        aria-checked="false"
        class="emotion-0"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="sui-box emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="sui-box emotion-4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-0 {
  opacity: 0;
  width: 0;
}

.emotion-0:focus + svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-2 {
  padding-top: 2px;
}

.emotion-5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-5.emotion-5 {
  overflow: hidden;
}

.emotion-4.emotion-4 {
  font-size: 12px;
  color: #ffc107;
  padding-right: 4px;
  padding-left: 4px;
}

.emotion-1 {
  fill: #4f0599;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-1.emotion-1 {
  margin-right: 10px;
  padding: 2px;
}

<div
    class="sui-box emotion-6"
  >
    <label
      class="sui-box emotion-3"
    >
      <input
        aria-checked="true"
        checked=""
        class="emotion-0"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="sui-box emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="emotion-2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="sui-box emotion-4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly checked and disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  opacity: 0;
  width: 0;
}

.emotion-0:focus + svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-2 {
  padding-top: 2px;
}

.emotion-5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-5.emotion-5 {
  overflow: hidden;
}

.emotion-4.emotion-4 {
  font-size: 12px;
  color: #ffc107;
  padding-right: 4px;
  padding-left: 4px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: not-allowed;
}

.emotion-3:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-1 {
  fill: #f6f5f7;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-1.emotion-1 {
  margin-right: 10px;
  padding: 2px;
}

<div
    class="sui-box emotion-6"
  >
    <label
      class="sui-box emotion-3"
    >
      <input
        aria-checked="true"
        aria-disabled="true"
        checked=""
        class="emotion-0"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
        class="sui-box emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,19H5V5H15V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V11H19M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
        />
      </svg>
      <div
        class="emotion-2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="sui-box emotion-4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  opacity: 0;
  width: 0;
}

.emotion-0:focus + svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-2 {
  padding-top: 2px;
}

.emotion-5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-5.emotion-5 {
  overflow: hidden;
}

.emotion-4.emotion-4 {
  font-size: 12px;
  color: #ffc107;
  padding-right: 4px;
  padding-left: 4px;
}

.emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: not-allowed;
}

.emotion-3:hover svg {
  border-radius: 4px;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-1 {
  fill: #f6f5f7;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-1.emotion-1 {
  margin-right: 10px;
  padding: 2px;
}

<div
    class="sui-box emotion-6"
  >
    <label
      class="sui-box emotion-3"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        class="emotion-0"
        disabled=""
        name="checkbox"
        style="pointer-events: none;"
        type="checkbox"
      />
      <svg
        class="sui-box emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="sui-box emotion-4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with a value 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-0 {
  opacity: 0;
  width: 0;
}

.emotion-0:focus + svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-1 {
  fill: #dce1eb;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-1.emotion-1 {
  margin-right: 10px;
  padding: 2px;
}

.emotion-2 {
  padding-top: 2px;
}

.emotion-5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-5.emotion-5 {
  overflow: hidden;
}

.emotion-4.emotion-4 {
  font-size: 12px;
  color: #ffc107;
  padding-right: 4px;
  padding-left: 4px;
}

<div
    class="sui-box emotion-6"
  >
    <label
      class="sui-box emotion-3"
    >
      <input
        aria-checked="false"
        class="emotion-0"
        name="checkbox"
        type="checkbox"
        value="test"
      />
      <svg
        class="sui-box emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="sui-box emotion-4"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with an error 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-0 {
  opacity: 0;
  width: 0;
}

.emotion-0:focus + svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-2 {
  padding-top: 2px;
}

.emotion-4.emotion-4 {
  font-size: 12px;
  color: #ffc107;
  padding-right: 4px;
  padding-left: 4px;
}

.emotion-1 {
  fill: #ef5774;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-1.emotion-1 {
  margin-right: 10px;
  padding: 2px;
}

.emotion-5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.emotion-5.emotion-5 {
  overflow: hidden;
}

<div
    class="sui-box emotion-6"
  >
    <label
      class="sui-box emotion-3"
    >
      <input
        aria-checked="false"
        class="emotion-0"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="sui-box emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="sui-box emotion-4"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkbox renders correctly with valid 1`] = `
<DocumentFragment>
  .emotion-3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
}

.emotion-3:hover svg {
  border-radius: 4px;
  background-color: #f6f5f7;
  fill: #4f0599;
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.emotion-0 {
  opacity: 0;
  width: 0;
}

.emotion-0:focus + svg {
  outline: 1px #b2b6c3 dotted;
}

.emotion-2 {
  padding-top: 2px;
}

.emotion-5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-5.emotion-5 {
  overflow: hidden;
}

.emotion-4.emotion-4 {
  font-size: 12px;
  color: #ffc107;
  padding-right: 4px;
  padding-left: 4px;
}

.emotion-1 {
  fill: #45d6b5;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  box-sizing: content-box;
}

.emotion-1.emotion-1 {
  margin-right: 10px;
  padding: 2px;
}

<div
    class="sui-box emotion-6"
  >
    <label
      class="sui-box emotion-3"
    >
      <input
        aria-checked="false"
        class="emotion-0"
        name="checkbox"
        type="checkbox"
      />
      <svg
        class="sui-box emotion-1"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M19,5V19H5V5H19Z"
        />
      </svg>
      <div
        class="emotion-2"
      >
        Checkbox Label
      </div>
    </label>
    <div
      class="sui-box emotion-5"
    >
      <div
        class="sui-box emotion-4"
      />
    </div>
  </div>
</DocumentFragment>
`;
